--- a/apps/docs/docs/getting-started/support.mdx
+++ b/apps/docs/docs/getting-started/support.mdx
@@ -1,14 +1,22 @@
 ---
-title: Support development
+title: Support and contribute to development
+sidebar: 
+  label: Support & contribution
 ---
 
-Kilpi is free to use and will always remain so and I am committed to maintaining Kilpi, as I am using it in multiple production projects. However, developing and maintaining an open-source library "as a hobby" may not be sustainable in the long run.
+Kilpi is free to use and will always remain so. I am committed to maintaining Kilpi, as I am using it in multiple production projects. However, developing and maintaining an open-source library "as a hobby" may not be sustainable in the long run.
 
 ## Supporting development
 
-You can help keep the coffee flowing to receive active maintenance and new features by supporting me for the small price of a coffee. Even small contributions are greatly appreciated and help keep Kilpi alive and evolving.
+You can help keep the coffee flowing to receive active maintenance and new features by supporting me for the small price of a coffee. All contributions are greatly appreciated and help keep Kilpi alive and evolving.
 
-<a href="https://www.buymeacoffee.com/nevavuoriji" target="_blank" style="margin-block:32px;display:inline-block;"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></img></a>
+<a href="https://www.buymeacoffee.com/nevavuoriji" target="_blank" style="margin-block:16px;display:inline-block;"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></img></a>
+
+**Using Kilpi at your company?** Consider [becoming a sponsor](https://www.jussinevavuori.com/#contact).
+
+## Feedback, feature requests, issues and bug reports
+
+All feedback, feature requests, issues and bug reports are welcome. [Create a new issue on Github](https://github.com/Jussinevavuori/kilpi/issues/new) to start a conversation.
 
 ## Contributing
 
@@ -18,7 +26,8 @@ Kilpi is open-source. This means you are free to contribute. [Clone the reposito
 Instructions on contributing to Kilpi are coming soon. For now, you can clone the repository and start creating pull requests.
 </Aside>
 
-Help is especially needed in **improving the documentation** and **adapting Kilpi to other frameworks** (either by providing installation guides or new plugins for components and automatic scoping), such as:
+Help is especially needed in **improving the documentation** and **adapting Kilpi to other frameworks** (either by providing installation guides, new plugins for components and automatic scoping or example projects). These frameworks include but are not limited to:
+
 - Tanstack Start
 - Vue and Nuxt
 - Svelte and SvelteKit
@@ -26,8 +35,5 @@ Help is especially needed in **improving the documentation** and **adapting Kilp
 - Angular, Angular SSR and Analog
 - Astro
 - Fastify
-- Fresh
-- Elysia
-- Ultra
 
 And many others.
