--- a/apps/docs/docs/installation/nest-js.mdx
+++ b/apps/docs/docs/installation/nest-js.mdx
@@ -3,22 +3,54 @@ title: Nest.js
 description: Install Kilpi for Nest.js
 ---
 
-Ensure you have setup Kilpi using the [quickstart guide](/docs/getting-started/quickstart) before proceeding.
+<Steps>
+<Step>
+### Install & setup Kilpi
 
-Installing Kilpi for Nest.js is as easy as providing Kilpi scope within a middleware. You do not need any plugins. We also recommend to set an `onUnauthorized` handler to throw an UnauthorizedException with a 403 status code.
+Install Kilpi and setup your Kilpi instance by following the [quickstart guide](/docs/getting-started/quickstart).
+
+```ts
+export const Kilpi = createKilpi({
+  getSubject,
+  policies,
+  ...
+})
+```
+</Step>
+
+<Step>
+### [Provide scope](/docs/concepts/scope)
+
+To use the full feature set of Kilpi, you need to [provide a scope](/docs/concepts/scope) for each request. This can be done by using the `Kilpi.runInScope` method as a middleware.
 
 ```ts
 import { Request, Response, NextFunction } from 'express';
 
 function kilpiMiddleware(req: Request, res: Response, next: NextFunction) {
   Kilpi.runInScope(async () => {
-    Kilpi.onUnauthorized(() => {
-      throw new ForbiddenException();
-    })
-    
     next();
   })
 };
 
 app.use(kilpiMiddleware)
 ```
+</Step>
+
+<Step>
+### Handle unauthorized errors
+
+Since Nest.js supports throwing HTTP exceptions, handling errors is straightforward with a middleware.
+
+```diff lang="ts"
+  function kilpiMiddleware(req: Request, res: Response, next: NextFunction) {
+    Kilpi.runInScope(async () => {
++     Kilpi.onUnauthorized(() => {
++       throw new ForbiddenException();
++     })
+      
+      next();
+    })
+  };
+```
+</Step>
+</Steps>
