docs: add mobile menu, rewrite docs

--- a/apps/docs/docs/concepts/subject.mdx
+++ b/apps/docs/docs/concepts/subject.mdx
@@ -1,5 +1,7 @@
 ---
 title: Subject
+sidebar:
+  order: 3
 ---
 
 **The subject** represents your **user** or other actor and their permissions, memberships or similar. The subject allows you to wrap any authentication provider and pass it to Kilpi for evaluating policies. The term "user" can be used interchangeably with the "subject".
