--- a/apps/docs/docs/concepts/usage-on-client.mdx
+++ b/apps/docs/docs/concepts/usage-on-client.mdx
@@ -1,5 +1,7 @@
 ---
 title: Usage on client
+sidebar:
+  order: 5
 ---
 
 You can also use Kilpi on the client-side, as long as you have a server-side instance of Kilpi you can connect to using the [endpoint plugin](https://kilpi.dev/docs/docs/plugins/endpoint).
