--- a/apps/docs/docs/concepts/hooks.mdx
+++ b/apps/docs/docs/concepts/hooks.mdx
@@ -6,9 +6,9 @@ title: Hooks
 This is an advanced concept and not required for most use-cases.
 </Aside>
 
-Hooks are a flexible API that allows hooking into the functionality of the core library. They are used to customize and extend the behavior of Kilpi.
+**Hooks are callback functions** registered via `Kilpi.hooks.onSomeHook`. Registering a hook returns an `unregister` function which can be used to remove the hook.
 
-In essence, hooks are callback functions registered via `Kilpi.hooks.onSomeHook` and called by the core library at specific times. Registering a hook returns an `unregister` function which can be used to remove the hook.
+Hooks offer a flexible API for hooking into and extending the functionality of the core library, especially for plugins.
 
 ## Types of hooks
 
@@ -16,7 +16,7 @@ This list contains the types of different hooks you can use to use with Kilpi or
 
 ### `onRequestScope`
 
-When there is no explicit scope available via `Kilpi.runInScope` (or `Kilpi.scoped`), Kilpi attempts to resolve the scope from plugins using the `onRequestScope` hook. It must return a scope object if possible.
+When there is no explicit scope available via `Kilpi.runInScope` or `Kilpi.scoped`, Kilpi attempts to resolve a scope from plugins using the `onRequestScope` hook. The hook must return a scope object if one can be created for the current request.
 
 ```ts
 const unregister = Kilpi.hooks.onRequestScope(() => {
@@ -26,12 +26,27 @@ const unregister = Kilpi.hooks.onRequestScope(() => {
 });
 ```
 
+<Aside type="tip">
+If your framework provides an API to hook into a request-scoped AsyncContext or AsyncLocalStorage, you can use this hook to automatically create a scope for each request.
+
+[See for example](https://github.com/Jussinevavuori/kilpi/blob/main/packages/react-server/src/plugins/ReactServerComponentPlugin.ts) how the [React Server Components Plugin](/docs/plugins/react-server-components) uses `React.cache` to automatically create a scope for each RSC request.
+</Aside>
+
 ### `onAfterAuthorization`
 
-Called after a policy is evaluated with the authorization result (from `.authorize()`, `.isAuthorized()` or any other function). Only used as a callback.
+Called after a policy is evaluated with the authorization result (from e.g. `Kilpi.authorize()` or `Kilpi.isAuthorized()`). Only used as a callback, for example for logging.
 
 ```ts
 const unregister = Kilpi.hooks.onAfterAuthorization((event) => {
-  console.log(`Authorization ${event.authorization.granted ? "passed" : "denied"} on ${event.policy} from ${event.source} for ${event.subject.name}`)
+  console.log(`Authorization ${event.authorization.granted ? "passed" : "denied"}`)
+  console.log(`> Policy: ${event.policy}`)
+  console.log(`> Subject: ${event.subject.name}`)
+  console.log(`> Source: ${event.source}`)
+  console.log(`> Error: ${event.authorization.error}`)
 });
 ```
+
+<Aside type="tip">
+For auditing your authorizations, we recommend using the [Audit Plugin](/docs/plugins/audit) instead of this hook. It uses this hook internally.
+</Aside>
+
